Fix for bug #12267 (primary key over GEOMETRY field)

mysql-test/r/gis.result:
  test result fixed
mysql-test/t/gis.test:
  test case added
sql/sql_table.cc:
  we should check this for GEOMETRY fields